# ad_site_backend_Avito_application

./: README.md  pyproject.toml
ads/: models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/: settings.py  urls.py
users/: admin.py  managers.py  models.py  serializers.py
